--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
+    "vueperslides": "^2.15.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
